html code completed

--- a/index.html
+++ b/index.html
@@ -13,18 +13,87 @@
   <div class="panel-title">What programming language should I learn?</div>
   </div>
   <div class="panel-body">
-    <h4>Currently, Epicodus offers the following tracks in Portland and Seattle:</h4>
-      <ul>
-          <li><span class="btn btn-link" id="ruby_rails">Ruby/Rails</span><span id="ruby">!!!!!!!!!!!</span></li>
-          <li><span class="btn btn-link" id="php_drupal">PHP/Drupal</span><span id="php">XXXXXX</span></li>
-          <li><span class="btn btn-link" id="java_android">Java/Android</span><span id="java">YYYYY</span></li>
-          <li><span class="btn btn-link" id="css_design">CSS/Design</span><span id="css">BBBB</span></li>
-          <li><span class="btn btn-link" id="c#_net">C#/.NET</span><span id="c-sharp">SSSSSS</span></li>
+  <div class="epicodus">Epicodus offers the following tracks in Portland and Seattle:</div>
+      <ul class="btn btn-link">
+          <li class="ruby_line"><span id="ruby_rails">Ruby/Rails</span><span id="ruby">AAAAA</span></li>
+          <li><span id="php_drupal">PHP/Drupal</span><span id="php">XXXXXX</span></li>
+          <li><span id="java_android">Java/Android</span><span id="java">YYYYY</span></li>
+          <li><span id="css_design">CSS/Design</span><span id="css">BBBB</span></li>
+          <li><span id="cnet">C#/.NET</span><span id="c-sharp">SSSSSS</span></li>
       </ul>
-  </div>
-  </div>
+    </div>
   </div>
   <div class="well">Let's take a survey!</div>
+  <div>
+    <form id="formOne">
+      <div class="form-group">
+        <label for="person1">First, Last Name</label>
+        <input id="person1" class="form-control" type="text">
+      </div>
+  <div class="form-group">
+    <label for="person2">Address</label>
+       <input id="person2" class="form-control" type="text">
+  </div>
+</div>
+<div><h3>Types of Software Applications</h3></div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="Web" checked>
+    Web
+  </label>
+</div id="apps">
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="mobile">
+    Mobile
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="graphics_programs">
+    Graphics Programs
+  </label>
+</div>
+<div><h3>What programming language?</h3></div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="java" checked>
+    Java
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="ruby">
+    Ruby
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="php">
+  PHP
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="csarp">
+  C Sharp
+  </label>
+</div>
+<div><h3>Business vs User Interface logic:</h3></div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="business" checked>
+    Backend development
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="userinterface">
+    Frontend development
+  </label>
+</div>
+
+
 
 
 
