add css to modify panel-body buttons

--- a/index1.html
+++ b/index1.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href="css/theme.css" rel="stylesheet" type="text/css">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
-        <script src="js/jquery-3.2.1.js"></script>
-        <script src="js/scripts.js"></script>
-        <title>What programming language should I learn?</title>
-    </head>
-<div class="container">
-<div class="panel panel-default">
-<div class="panel-heading">
-<div class="panel-title">What is a Software Stack? Choose the right stack!</div>
-</div>
-<div class="panel-body">
-<div class="about">Epicodus provides full-time courses in languages such as C#, PHP,
-  Javascript, .NET, Ruby, Rails, React, and more. Every track starts with Introduction
-  to Programming, and includes an advanced JavaScript course, as well as two
-  language-specific courses: four five-week sessions in total. In addition, students
-  complete two weeks of job and internship prep and finish their studies with a five-week
-  internship.</div>
-<div class="epicodus">Epicodus offers the following software stacks in Portland and Seattle:</div>
 <div class="row">
      <div class="col-md-3">
         <button id="ruby_text" type="button" class="btn btn-primary btn-lg">Ruby/Rails</button>
         <button id="php_text" type="button" class="btn btn-primary btn-lg">PHP/Drupal</button>
         <button id="java_text" type="button" class="btn btn-primary btn-lg">Java/Android</button>
-        <button id="csharp_text" type="button" class="btn btn-primary btn-lg">CSharp/.NET</button>
+        <button id="csharp_text" type="button" class="btn btn-primary btn-lg">C#/.NET</button>
         <button id="css_text" type="button" class="btn btn-primary btn-lg">CSS/Design</button>
      </div>
        <div class="col-md-5">
@@ -65,81 +43,3 @@
         </div>
         </div>
 </div>
-</div>
-</div>
-<div class="well">Let's take a survey!</div>
-<div>
-    <form id="formOne">
-        <div class="form-group">
-            <label for="person1"><h4>First, Last Name</h4></label>
-            <input id="person1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-            <label for="adress"><h4>Address</h4></label>
-            <input id="address" class="form-control" type="text">
-        </div>
-</div>
-<div id="app_types"><h3>Types of Software Applications:</h3></div>
-<div class="radio">
-  <label id="web_radio">
-    <input type="radio" name="application" value="Web" checked>
-    Web
-  </label>
-</div id="apps">
-<div class="radio">
-  <label id="mobil_radio">
-    <input type="radio" name="application" value="mobile">
-    Mobile
-  </label>
-</div>
-<div class="radio">
-  <label id="graphic_radio">
-    <input type="radio" name="application" value="graphics_programs">
-    Graphics Programs
-  </label>
-</div>
-<div id="program_lang"><h3>What programming language?</h3></div>
-<div class="radio">
-  <label id="java_radio">
-    <input type="radio" name="language" value="java" checked>
-    Java
-  </label>
-</div>
-<div class="radio">
-  <label id="ruby_lang_radio">
-    <input type="radio" name="language" value="ruby">
-    Ruby
-  </label>
-</div>
-<div class="radio">
-  <label id="php_lang_radio">
-    <input type="radio" name="language" value="php">
-  PHP
-  </label>
-</div>
-<div class="csharp_radio">
-  <label id="scharp_lang_radio">
-    <input type="radio" name="language" value="csarp">
-  C Sharp
-  </label>
-</div>
-<div id="logic_choice"><h3>Business vs User Interface logic:</h3></div>
-<div class="radio">
-  <label id="backend_radio">
-    <input type="radio" name="logic" value="business" checked>
-    Backend development
-  </label>
-</div>
-<div class="radio">
-  <label id="frontend_radio">
-    <input type="radio" name="logic" value="userinterface">
-    Frontend development
-  </label>
-</div>
-
-<div><button id="submit_button" type="submit" class="btn btn-default">Submit</button></div>
-</div>
-<div id="output">
-</div>
-</body>
-</html>
