Revert "add more  radio-button choises"
This reverts commit 68bc2f8b85d614cde796fe1a373ca216f587f477.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
 <div class="panel panel-default">
 <div class="panel-heading">
-<div class="panel-title">What Epicodus programming stack is right for you? Choose the right stack!</div>
+<div class="panel-title">What is a Software Stack? Choose the right stack!</div>
 </div>
 <div class="panel-body">
 <div class="about">Epicodus provides full-time courses in languages such as C#, PHP,
@@ -25,7 +25,7 @@
         <button id="ruby_text" type="button" class="btn btn-primary btn-lg">Ruby/Rails</button>
         <button id="php_text" type="button" class="btn btn-primary btn-lg">PHP/Drupal</button>
         <button id="java_text" type="button" class="btn btn-primary btn-lg">Java/Android</button>
-        <button id="csharp_text" type="button" class="btn btn-primary btn-lg">C#/.NET</button>
+        <button id="csharp_text" type="button" class="btn btn-primary btn-lg">CSharp/.NET</button>
         <button id="css_text" type="button" class="btn btn-primary btn-lg">CSS/Design</button>
      </div>
        <div class="col-md-5">
@@ -62,42 +62,22 @@
                    of interactive features that deliver pages to your site visitors. Web Design is a crucial component in web
                    development, and students who learn design will be able to engineer positive and interactive user
                    experiences through innovative interfaces.
-</div>
-</div>
+        </div>
+        </div>
 </div>
 </div>
 </div>
 <div class="well">Let's take a survey!</div>
 <div>
-  <div class="row">
-    <div class="col-md-3">
-      <form id="formOne">
-<div class="form-group">
-      <label for="person1"><h4>First Name</h4></label>
-              <input id="person1" class="form-control" type="text">
-          </div>
-    </div>
-      <div class="col-md-5">
-        <form id="formOne">
-            <div class="form-group">
-                <label for="person2"><h4>Last Name</h4></label>
-                <input id="person2" class="form-control" type="text">
-            </div>
-       </div>
-  </div>
-</div>
-<div id="app_types"><h3>Are you currently enrolled in Intro to Programming?</h3></div>
-<div class="radio">
-  <label id="web_radio">
-    <input type="radio" name="choosing" value="No" checked>
-    No
-  </label>
-</div id="apps">
-<div class="radio">
-  <label id="mobil_radio">
-    <input type="radio" name="choosing" value="Yes">
-    Yes
-  </label>
+    <form id="formOne">
+        <div class="form-group">
+            <label for="person1"><h4>First, Last Name</h4></label>
+            <input id="person1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+            <label for="adress"><h4>Address</h4></label>
+            <input id="address" class="form-control" type="text">
+        </div>
 </div>
 <div id="app_types"><h3>Types of Software Applications:</h3></div>
 <div class="radio">
@@ -140,13 +120,7 @@
 <div class="csharp_radio">
   <label id="scharp_lang_radio">
     <input type="radio" name="language" value="csarp">
-  C#
-  </label>
-</div>
-<div class="css_radio">
-  <label id="scharp_lang_radio">
-    <input type="radio" name="language" value="css">
-  CSS/Design
+  C Sharp
   </label>
 </div>
 <div id="logic_choice"><h3>Business vs User Interface logic:</h3></div>
