add new content in qustions part

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     Yes
   </label>
 </div>
-<div id="app_types"><h3>Types of Software Applications:</h3></div>
+<div id="app_types"><h3>What type of software applications?</h3></div>
 <div class="radio">
   <label id="web_radio">
     <input type="radio" name="application" value="Web" checked>
@@ -149,7 +149,7 @@
   CSS/Design
   </label>
 </div>
-<div id="logic_choice"><h3>Business vs User Interface logic:</h3></div>
+<div id="logic_choice"><h3>Business vs User Interface logic?</h3></div>
 <div class="radio">
   <label id="backend_radio">
     <input type="radio" name="logic" value="business" checked>
