--- a/index.html
+++ b/index.html
@@ -145,15 +145,17 @@
   </div>
   <div class="radio">
     <label id="backend_radio">
-      <input type="radio" name="logic" value="business" checked> Backend development </label>
+      <input type="radio" name="type" value="backend" checked> Backend development
+    </label>
   </div>
   <div class="radio">
     <label id="frontend_radio">
-      <input type="radio" name="logic" value="userinterface"> Frontend development </label>
+      <input type="radio" name="type" value="frontend"> Frontend development </label>
   </div>
   <div>
     <button id="submit_button" type="submit" class="btn btn-default">Submit</button>
   </div>
+  <div class="well">
   <div id="output"> </div>
   </div>
 </body>
