--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>What programming language should I learn?</title>
 </head>
 <body>
@@ -152,11 +153,24 @@
     <label id="frontend_radio">
       <input type="radio" name="type" value="frontend"> Frontend development </label>
   </div>
-  <div>
-    <button id="submit_button" type="submit" class="btn btn-default">Submit</button>
-  </div>
-  <div class="well">
+    <button id ="submit_button" type="button" class="btn btn-info btn-lg">Submit</button>
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Stack for you!</h4>
+            </div>
+            <div id="modal-text" class="modal-body">
+              <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+              <button id="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
   <div id="output"> </div>
-  </div>
+</div>
 </body>
 </html>
