add js if-else statements

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </div>
   <div class="csharp_radio">
     <label id="scharp_lang_radio">
-      <input type="radio" name="language" value="csarp"> C# </label>
+      <input type="radio" name="language" value="csharp"> C# </label>
   </div>
   <div class="css_radio">
     <label id="scharp_lang_radio">
